--- a/export/css/optionSelector.css
+++ b/export/css/optionSelector.css
@@ -3,6 +3,7 @@
 	font-weight: bold;
 	background-color: rgb(0, 0, 0);
 	color: rgb(250, 250, 250);
+	transition: 250ms ease;
 }
 
 .option-selector:hover,
