--- a/css/override.css
+++ b/css/override.css
@@ -20,6 +20,9 @@ body {
 }
 
 .no-interact {
-	background: rgba(0, 0, 0, 0.5);
 	pointer-events: none;
+}
+
+.no-interact > * {
+	background-color: rgba(0, 0, 0, 0.5);
 }
